# WeDPR-Lab-Core

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Changelog.md  README.md  rust-toolchain
.github/workflows/: default_test.yml  release.yml  vcl.yml  workflow.yml
blockchain_wallet/hierarchical_deterministic_wallet/: Cargo.toml
blockchain_wallet/hierarchical_deterministic_wallet/src/: hdw.rs  lib.rs
bounty/: Cargo.toml
bounty/src/: bounty_utils.rs  lib.rs  main.rs  scd.rs  selective_disclosure.rs  utils.rs  vcl.rs  vcl_data.rs
common/macros/: Cargo.toml
common/macros/src/: lib.rs
common/protos/crypto/: zkp.proto
common/protos/src/: lib.rs  main.rs
common/utils/: Cargo.toml
common/utils/src/: error.rs  lib.rs
common/utils/src/coder/: base_x.rs  basic.rs  mod.rs
crypto/: Cargo.toml
crypto/src/: constant.rs  lib.rs  utils.rs  zkp.rs
crypto/src/coder/: base_x.rs  mod.rs
crypto/src/ecies/: mod.rs  secp256k1.rs
crypto/src/hash/: keccak256.rs  mod.rs
crypto/src/signature/: mod.rs  secp256k1.rs
ffi/ffi_c/ffi_c_acv/: Cargo.toml
ffi/ffi_c/ffi_c_acv/src/: coordinator.rs  counter.rs  lib.rs  verifier.rs  voter.rs
ffi/ffi_c/ffi_c_common/: Cargo.toml
ffi/ffi_c/ffi_c_common/src/: lib.rs
ffi/ffi_c/ffi_c_crypto/: Cargo.toml  README.md
ffi/ffi_c/ffi_c_crypto/src/: lib.rs
ffi/ffi_c/ffi_c_hdw/: Cargo.toml
ffi/ffi_c/ffi_c_hdw/src/: bitcoin.rs  lib.rs
ffi/ffi_c/ffi_c_ktb/: Cargo.toml
ffi/ffi_c/ffi_c_ktb/src/: hdk.rs  lib.rs
ffi/ffi_c/ffi_c_scd/: Cargo.toml
ffi/ffi_c/ffi_c_scd/src/: issuer.rs  lib.rs  user.rs  verifier.rs
ffi/ffi_c/ffi_c_selective_disclosure/: Cargo.toml
ffi/ffi_c/ffi_c_selective_disclosure/src/: issuer.rs  lib.rs  user.rs  verifier.rs
ffi/ffi_c/ffi_c_vcl/: Cargo.toml
ffi/ffi_c/ffi_c_vcl/src/: lib.rs
ffi/ffi_common/: Cargo.toml
ffi/ffi_common/src/: lib.rs  utils.rs
ffi/ffi_java/ffi_java_acv/: Cargo.toml
ffi/ffi_java/ffi_java_acv/src/: coordinator.rs  counter.rs  lib.rs  verifier.rs  voter.rs
ffi/ffi_java/ffi_java_crypto/: Cargo.toml  README.md
ffi/ffi_java/ffi_java_crypto/src/: lib.rs
ffi/ffi_java/ffi_java_hdw/: Cargo.toml  README.md
ffi/ffi_java/ffi_java_hdw/src/: bitcoin.rs  lib.rs
ffi/ffi_java/ffi_java_ktb/: Cargo.toml  README.md
ffi/ffi_java/ffi_java_ktb/src/: hdk.rs  lib.rs
ffi/ffi_java/ffi_java_scd/: Cargo.toml  README.md
ffi/ffi_java/ffi_java_scd/src/: issuer.rs  lib.rs  user.rs  verifier.rs
ffi/ffi_java/ffi_java_selective_disclosure/: Cargo.toml  README.md
ffi/ffi_java/ffi_java_selective_disclosure/src/: issuer.rs  lib.rs  user.rs  verifier.rs
ffi/ffi_java/ffi_java_vcl/: Cargo.toml
ffi/ffi_java/ffi_java_vcl/src/: lib.rs
ffi/ffi_macros/: Cargo.toml
ffi/ffi_macros/src/: lib.rs
ffi/ffi_vcl/: Cargo.toml
ffi/ffi_vcl/src/: lib.rs
protos/: Cargo.toml
protos/crypto/: common.proto  ot.proto  zkp.proto
protos/solution/abv/: abv.proto
protos/solution/acv/: acv.proto
protos/solution/hdw/: hdw.proto
protos/solution/ktb/: hdk.proto
protos/solution/scd/: scd.proto
protos/solution/selective_disclosure/: selective_disclosure.proto
protos/solution/vcl/: vcl.proto
protos/src/: config.rs  lib.rs  main.rs
selective_certificate_disclosure/: Cargo.toml
selective_certificate_disclosure/src/: issuer.rs  lib.rs  main.rs  user.rs  utils.rs
solution/anonymous_bounded_voting/: Cargo.toml
solution/anonymous_bounded_voting/src/: config.rs  coordinator.rs  counter.rs  lib.rs  verifier.rs  voter.rs
solution/anonymous_ciphertext_voting/: Cargo.toml
solution/anonymous_ciphertext_voting/src/: config.rs  coordinator.rs  counter.rs  lib.rs  main.rs  utils.rs  verifier.rs  voter.rs
solution/blockchain_wallet/hierarchical_deterministic_wallet/: Cargo.toml
solution/blockchain_wallet/hierarchical_deterministic_wallet/src/: hdw.rs  lib.rs
solution/key_tool_box/hierarchical_deterministic_key/: Cargo.toml
solution/key_tool_box/hierarchical_deterministic_key/src/: hdk.rs  lib.rs
solution/selective_certificate_disclosure/: Cargo.toml
solution/selective_certificate_disclosure/src/: issuer.rs  lib.rs  main.rs  user.rs  utils.rs  verifier.rs
solution/selective_disclosure/: Cargo.toml
solution/selective_disclosure/src/: issuer.rs  lib.rs  main.rs  user.rs  utils.rs  verifier.rs
solution/verifiable_confidential_ledger/: Cargo.toml
solution/verifiable_confidential_ledger/benches/: vcl.rs
solution/verifiable_confidential_ledger/src/: main.rs  vcl.rs
verifiable_confidential_ledger/: Cargo.toml
verifiable_confidential_ledger/benches/: vcl.rs
verifiable_confidential_ledger/src/: lib.rs  main.rs  vcl.rs
