[workspace]

members = [
"bounty",
"crypto",
"solution/verifiable_confidential_ledger",
"solution/selective_certificate_disclosure",
"common/utils",
"common/macros",
"ffi/ffi_common",
"ffi/ffi_macros",
"ffi/ffi_c/ffi_c_crypto",
"ffi/ffi_c/ffi_c_scd",
"ffi/ffi_c/ffi_c_vcl",
"ffi/ffi_java/ffi_java_crypto",
"ffi/ffi_java/ffi_java_scd",
"ffi/ffi_java/ffi_java_vcl",
"protos",
]
