[workspace]

members = [
"bounty",
"blockchain_wallet/hierarchical_deterministic_wallet",
"verifiable_confidential_ledger",
"selective_certificate_disclosure",
"ffi/ffi_c/ffi_c_scd",
"ffi/ffi_c/ffi_c_vcl",
"ffi/ffi_c/ffi_c_hdw",
"ffi/ffi_java/ffi_java_scd",
"ffi/ffi_java/ffi_java_vcl",
"ffi/ffi_java/ffi_java_hdw",
"protos",
]
