[workspace]

members = [
    "bounty",
    "ffi/ffi_c/ffi_c_ktb",
    "ffi/ffi_c/ffi_c_scd",
    "ffi/ffi_c/ffi_c_vcl",
    "ffi/ffi_java/ffi_java_ktb",
    "ffi/ffi_java/ffi_java_scd",
    "ffi/ffi_java/ffi_java_vcl",
    "protos",
    "solution/key_tool_box/hierarchical_deterministic_key",
    "solution/selective_certificate_disclosure",
    "solution/verifiable_confidential_ledger",
    "solution/anonymous_ciphertext_voting",
]
