[package]
name = "wedpr_bounty"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
curve25519-dalek = { version = "1", features = [ "serde" ] }
protobuf = "2.20.0"
sha3 = "0.8"
rand = "0.3.17"
wedpr_l_crypto_zkp_discrete_logarithm_proof = "0.0.1"
wedpr_l_crypto_zkp_range_proof = "0.0.1"
wedpr_l_macros = "0.0.1"
wedpr_s_protos = { path = "../protos", version = "1.3.0"}
wedpr_l_protos = "0.0.1"
wedpr_l_utils = "0.0.1"
wedpr_l_crypto_zkp_utils = "0.0.1"
wedpr_s_verifiable_confidential_ledger = { path = "../verifiable_confidential_ledger" }
wedpr_s_selective_certificate_disclosure = { path = "../selective_certificate_disclosure" }

[dev-dependencies]
wedpr_l_common_coder_base64 = "0.0.1"
