[package]
name = "wedpr_crypto"
version = "1.0.0"
authors = ["WeDPR <wedpr@webank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
bulletproofs = "1.0.4"
curve25519-dalek = { version = "1", features = ["serde"] }
lazy_static = "0.2"
merlin = "1"
rand = "0.6"
secp256k1 = { version = "0.17.2", features = ["recovery"] }
sha3 = "0.8"
wedpr_macros = { path = "../common/macros/"}
wedpr_protos = { path = "../common/protos/" }
wedpr_utils = { path = "../common/utils" }
