[package]
name = "wedpr_s_protos"
version = "1.6.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR protobuf definitions and their generated code."

[features]
default = ["wedpr_f_secp256k1_signature"]
sm = ["wedpr_f_sm_signature"]
wedpr_f_sm_signature = ["wedpr_l_crypto_hash_sm3", "wedpr_l_crypto_signature_sm2"]
wedpr_f_secp256k1_signature = ["wedpr_l_crypto_hash_keccak256", "wedpr_l_crypto_signature_secp256k1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
protobuf = "2.22.1"
protoc-rust = "2.22.1"
wedpr_l_utils = "1.1.0"
wedpr_l_crypto_zkp_utils = {version = "1.3.0", git = "https://github.com/WeBankBlockchain/WeDPR-Lab-Crypto", tag = "v1.3.0"}
wedpr_l_crypto_hash_sm3 = {version = "1.1.0", optional = true}
wedpr_l_crypto_signature_sm2 = {version = "1.1.0", optional = true}
wedpr_l_crypto_hash_keccak256 = {version = "1.1.0", optional = true}
wedpr_l_crypto_signature_secp256k1 = {version = "1.1.0", optional = true}
