[package]
name = "wedpr_s_selective_certificate_disclosure"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of selective certificate disclosure (SCD) solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
wedpr-indy-crypto = "0.4.5"
protobuf = "2.20.0"
serde = "1.0.102"
serde_json = "1.0.41"
wedpr_l_macros = "0.0.1"
wedpr_s_protos = { path = "../protos", version = "1.3.0"}
wedpr_l_utils = "0.0.1"
#wedpr_l_common_coder_base64 = {version = "0.0.1", optional = true}

[dev-dependencies]
criterion = "0.2"
