[package]
name = "wedpr_s_verifiable_confidential_ledger"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of verifiable confidential ledger (VCL) solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
curve25519-dalek = { version = "1", features = [ "serde" ] }
wedpr_l_macros = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/common/macros/", version = "1.0.0"}
wedpr_s_protos = { path = "../protos", version = "1.3.0"}
wedpr_l_protos = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/protos", version = "1.0.0"}
wedpr_l_utils = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/common/utils", version = "1.0.0" }
wedpr_l_crypto_zkp_discrete_logarithm_proof = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/crypto/zkp/discrete_logarithm_proof", version = "1.0.0" }
wedpr_l_crypto_zkp_range_proof = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/crypto/zkp/range_proof", version = "1.0.0" }
wedpr_l_crypto_zkp_utils = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/crypto/zkp/utils", version = "1.0.0" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "vcl"
harness = false
