[package]
name = "wedpr_s_hierarchical_deterministic_wallet"
version = "1.3.0"
authors = ["wedpr <wedpr@webank.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Library of Hierarchical Deterministic Wallet (HDW) solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3"
rand = "0.7"
wagyu-bitcoin = "0.6.3"
wagyu-model = "0.6.3"
wedpr_l_macros = { path = "/mnt/e/github/WeDPR-Lab-Crypto/common/macros/", version = "1.0.0"}
wedpr_s_protos = { path = "../../protos", version = "1.3.0"}
wedpr_l_utils = { path = "/mnt/e/github/WeDPR-Lab-Crypto/common/utils", version = "1.0.0" }

[dev-dependencies]
wedpr_l_crypto_ecies_secp256k1 = {path = "/mnt/e/github/WeDPR-Lab-Crypto/crypto/ecies/secp256k1"}
wedpr_l_crypto_signature_secp256k1 = {path = "/mnt/e/github/WeDPR-Lab-Crypto/crypto/signature/secp256k1"}
wedpr_l_crypto_hash_keccak256 = {path = "/mnt/e/github/WeDPR-Lab-Crypto/crypto/hash/keccak256"}
