[package]
name = "wedpr_utils"
version = "1.1.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of WeDPR shared macros."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
failure = "0.1"
hex = "0.3.0"
wedpr_macros = { path = "../macros/", version = "1.1.0"  }
