[package]
name = "wedpr_ffi_common"
version = "1.1.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.13.0"
libc = "0.2.60"
wedpr_crypto = { path = "../../crypto" }
wedpr_ffi_macros = { path = "../ffi_macros/" }
wedpr_macros = { path = "../../common/macros/" }
wedpr_utils = { path = "../../common/utils" }
