[package]
name = "wedpr_s_anonymous_ciphertext_voting"
version = "1.6.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of anonymous ciphertext voting (ACV) solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "1", features = [ "serde" ] }
lazy_static = "1.4.0"
wedpr_l_crypto_hash_keccak256 = "1.1.0"
wedpr_l_crypto_signature_secp256k1 = "1.1.0"
wedpr_l_crypto_zkp_discrete_logarithm_proof = {version = "1.3.0", git = "https://github.com/WeBankBlockchain/WeDPR-Lab-Crypto", branch = "dev-1.3.0"}
wedpr_l_crypto_zkp_range_proof = "1.2.0"
wedpr_l_crypto_zkp_utils = {version = "1.3.0", git = "https://github.com/WeBankBlockchain/WeDPR-Lab-Crypto", branch = "dev-1.3.0"}
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"
wedpr_s_protos = { path = "../../protos" }
colored = "1.8"
