[package]
name = "selective_certificate_disclosure"
version = "1.2.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
wedpr-indy-crypto = "0.4.5"
protobuf = "2.10.1"
serde = "1.0.102"
serde_json = "1.0.41"
wedpr_crypto = { path = "../../crypto/" }
wedpr_macros = { path = "../../common/macros/" }
wedpr_protos = { path = "../../protos/" }
wedpr_utils = { path = "../../common/utils" }

[dev-dependencies]
criterion = "0.2"
