[package]
name = "wedpr_s_selective_certificate_disclosure"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of selective certificate disclosure (SCD) solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
protobuf = "2.22.1"
serde = "1.0.102"
serde_json = "1.0.41"
wedpr-indy-crypto = "0.4.5"
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.0.0"
#wedpr_l_common_coder_base64 = {version = "1.0.0", optional = true}

wedpr_s_protos = "1.3.0"

[dev-dependencies]
criterion = "0.2"
