[package]
name = "wedpr_s_verifiable_confidential_ledger"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of verifiable confidential ledger (VCL) solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
curve25519-dalek = { version = "1", features = [ "serde" ] }
wedpr_l_macros = "0.0.1"
wedpr_s_protos = { path = "../../protos", version = "1.3.0"}
wedpr_l_protos = "0.0.1"
wedpr_l_utils = "0.0.1"
wedpr_l_crypto_zkp_discrete_logarithm_proof = "0.0.1"
wedpr_l_crypto_zkp_range_proof = "0.0.1"
wedpr_l_crypto_zkp_utils = "0.0.1"

protobuf = "2.20.0"
#protoc-rust = "2.20.0"

[dev-dependencies]
criterion = "0.2"
wedpr_l_common_coder_base64 = "0.0.1"

[[bench]]
name = "vcl"
harness = false
