[package]
name = "wedpr_s_verifiable_confidential_ledger"
version = "1.4.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of verifiable confidential ledger (VCL) solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.8"
curve25519-dalek = { version = "1", features = [ "serde" ] }
protobuf = "2.22.1"

wedpr_l_crypto_zkp_discrete_logarithm_proof = {version = "1.3.0", git = "https://github.com/WeBankBlockchain/WeDPR-Lab-Crypto", branch = "dev-1.3.0"}
wedpr_l_crypto_zkp_range_proof = "1.2.0"
wedpr_l_crypto_zkp_utils = {version = "1.3.0", git = "https://github.com/WeBankBlockchain/WeDPR-Lab-Crypto", branch = "dev-1.3.0"}

wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.1.0"
wedpr_s_protos = { path = "../../protos" }

[dev-dependencies]
criterion = "0.2"
wedpr_l_common_coder_base64 = "1.0.0"

[[bench]]
name = "vcl"
harness = false
