[package]
name = "ffi_c_abv"
version = "1.5.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_c_abv"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
libc = "0.2.60"
protobuf = "2.22.1"
wedpr_s_anonymous_bounded_voting = { path = "../../../solution/anonymous_ciphertext_voting" }
wedpr_ffi_common = "1.0.0"
wedpr_ffi_macros = "1.0.0"
wedpr_s_protos = { path = "../../../protos"}
wedpr_l_macros = "1.0.0"
wedpr_l_crypto_zkp_utils = "1.1.0"


# This is required to generate C/C++ header files.
[build-dependencies]
cbindgen = "0.9.0"
