[package]
name = "wedpr_ffi_c_common"
version = "1.1.0"
authors = ["WeDPR <wedpr@webank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.60"

# This is required to generate C/C++ header files.
[build-dependencies]
cbindgen = "0.9.0"