[package]
name = "ffi_c_hdk"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_c_hdk"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
libc = "0.2.60"
protobuf = "2.20.0"
wedpr_s_hierarchical_deterministic_key = { path = "../../../solution/key_tool_box/hierarchical_deterministic_key" }
wedpr_ffi_common = "0.0.1"
wedpr_ffi_macros = "0.0.1"
wedpr_s_protos = { path = "../../../protos/" }
wedpr_l_macros = "0.0.1"


# This is required to generate C/C++ header files.
[build-dependencies]
cbindgen = "0.9.0"