[package]
name = "ffi_c_selective_disclosure"
version = "0.1.0"
authors = ["HaoXuan40404 <444649358@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_c_selective_disclosure"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2.60"
wedpr_crypto = { path = "../../../crypto/" }
selective_disclosure = { path = "../../../solution/selective_disclosure" }
wedpr_ffi_c_common = { path = "../ffi_c_common/" }
wedpr_ffi_common = { path = "../../ffi_common/" }
wedpr_ffi_macros = { path = "../../../ffi/ffi_macros/" }
wedpr_macros = { path = "../../../common/macros/" }
wedpr_utils = { path = "../../../common/utils" }
wedpr_protos = { path = "../../../protos/" }
protobuf = "2.10.1"

# This is required to generate C/C++ header files.
[build-dependencies]
cbindgen = "0.9.0"
