[package]
name = "wedpr_ffi_c_vcl"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_c_vcl"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
libc = "0.2.60"
protobuf = "2.20.0"
wedpr_s_verifiable_confidential_ledger = { path = "../../../solution/verifiable_confidential_ledger" }
wedpr_ffi_common = "0.0.1"
wedpr_ffi_macros = "0.0.1"
wedpr_s_protos = { path = "../../../protos/" }
wedpr_l_protos = "0.0.1"
wedpr_l_macros = "0.0.1"

# This is required to generate C/C++ header files.
[build-dependencies]
cbindgen = "0.9.0"
