[package]
name = "ffi_java_acv"
version = "1.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_java_acv"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
jni = "0.13.0"
protobuf = "2.22.1"
wedpr_ffi_common = "1.1.0"
wedpr_ffi_macros = "1.1.0"

wedpr_l_crypto_zkp_utils = {version = "1.3.0", git = "https://github.com/WeBankBlockchain/WeDPR-Lab-Crypto", branch = "dev-1.3.0"}
wedpr_s_protos = { path = "../../../protos" }
wedpr_s_anonymous_ciphertext_voting = { path = "../../../solution/anonymous_ciphertext_voting" }

# This is required to generate C/C++ header files.
[build-dependencies]
cbindgen = "0.9.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.13.1", default-features = false }
