[package]
name = "wedpr_ffi_java_crypto"
version = "1.1.0"
authors = ["WeDPR <wedpr@webank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_java_crypto"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = "0.13.0"
wedpr_crypto = { path = "../../../crypto/" }
wedpr_ffi_common = { path = "../../ffi_common/" }
wedpr_ffi_macros = { path = "../../../ffi/ffi_macros/" }
wedpr_macros = { path = "../../../common/macros/" }
wedpr_utils = { path = "../../../common/utils" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.13.1", default-features = false }
openssl-sys = { version = "0.9.55", features = ["vendored"] }
