[package]
name = "ffi_java_hdw"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_java_hdw"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
jni = "0.13.0"
protobuf = "2.10.1"
wedpr_s_hierarchical_deterministic_wallet = { path = "../../../solution/blockchain_wallet/hierarchical_deterministic_wallet" }
wedpr_crypto = { path = "../../../crypto/" }
wedpr_ffi_common = { path = "../../ffi_common/" }
wedpr_ffi_macros = { path = "../../../ffi/ffi_macros/" }
wedpr_protos = { path = "../../../protos/" }
wedpr_utils = { path = "../../../common/utils" }

[build-dependencies]
cbindgen = "0.9.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.13.1", default-features = false }