[package]
name = "ffi_java_hdk"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffi_java_hdk"
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
jni = "0.13.0"
protobuf = "2.20.0"
wedpr_s_hierarchical_deterministic_key = "1.3.0"
wedpr_ffi_common = "1.0.0"
wedpr_ffi_macros = "1.0.0"
wedpr_s_protos = "1.3.0"

[build-dependencies]
cbindgen = "0.9.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.13.1", default-features = false }