[package]
name = "ffi_java_scd"
version = "1.3.0"
authors = [ "WeDPR <wedpr@webank.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ffi_java_scd"
crate-type = [ "cdylib" ]

[dependencies]
jni = "0.13.0"
protobuf = "2.20.0"
wedpr_s_selective_certificate_disclosure = { path = "../../../selective_certificate_disclosure" }
wedpr_ffi_common = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/ffi/ffi_common/",  features = [ "wedpr_f_base64" ] }
wedpr_ffi_macros = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/ffi/ffi_macros/" }
wedpr_s_protos = { path = "../../../protos/" }
wedpr_l_protos = { path = "/mnt/e/git_home/WeDPR-Lab-Crypto/protos/" }

[build-dependencies]
cbindgen = "0.9.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.13.1", default-features = false }
