[package]
name = "wedpr_s_hierarchical_deterministic_key"
version = "1.3.0"
authors = [ "wedpr <wedpr@webank.com>" ]
edition = "2018"
license = "Apache-2.0"
description = "Library of Hierarchical Deterministic Key (HDK) solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3"
rand = "0.7"
wagyu-model = { package = "h-wagyu-model", version = "0.6.3" }
wagyu_lib = { package = "wagyu-hdk", version = "0.6.4" }
wedpr_l_macros = "1.0.0"
wedpr_l_utils = "1.0.0"

wedpr_s_protos = "1.3.0"

[dev-dependencies]
wedpr_l_common_coder_base64 = "1.0.0"
wedpr_l_crypto_ecies_secp256k1 = "1.0.0"
wedpr_l_crypto_hash_keccak256 = "1.0.0"
wedpr_l_crypto_signature_secp256k1 = "1.0.0"
